initial check in of banthrico coin bank list

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -23,7 +23,9 @@
                                 <a href="{{ site.baseurl }}/blog/tags">Tags</a></li>
                             <li id="menu-item-4" class="menu-item">
                                 <a href="{{ site.baseurl }}/blog/projects">Projects</a></li>
-                            <li id="menu-item-5" class="menu-item"><a href="{{ site.baseurl }}/about">About Me</a></li>
+                            <li id="menu-item-5" class="menu-item">
+                                <a href="{{ site.baseurl }}/blog/miscellaneous">Misc</a></li>
+                            <li id="menu-item-6" class="menu-item"><a href="{{ site.baseurl }}/about">About Me</a></li>
                         </ul>
                     </div>
 
