added lightbox for images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,5 +15,7 @@
 
 {% include analytics.html %}
 <script src='{{ site.baseurl }}/js/menu.js'></script>
+<script type="text/javascript" src="/js/lightbox.js"></script>
+<link rel="stylesheet" href="/css/lightbox.css">
 </body>
 </html>
