--- a/style.scss
+++ b/style.scss
@@ -286,8 +286,8 @@ nav {
     padding: 0.1em 1em;
     color: $gray;
     // font-size: 22px;
-    font-size: 15px;
-    font-style: italic;
+    font-size: 12px;
+    // font-style: italic;
   }
 
   .comments {
