--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,7 +37,7 @@ layout: default
     {% include share.html %}
     {% endif %}
 
-    {% include disqus.html %}
+<!--    {% include disqus.html %}-->
 
 <!--    {% include utterance.html %}-->
 </article>
